--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,12 +6,12 @@ spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 #jpa configuration
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 # logs
-logging.config=classpath:log4j2.xml
-
+logging.level.org.springframework=ERROR 
+logging.level.io.app=TRACE
 
 # Server Port Configuration
 server.port=8085
